<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/dialogBackground"
	android:padding="@dimen/_10sdp">
	
	<TextView
		android:id="@+id/dialog_confirm_message"
		style="@style/QuestionFont"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/are_you_sure"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<TextView
		android:id="@+id/dialog_confirm_cancel"
		style="@style/QuestionFont"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/_30sdp"
		android:layout_marginEnd="@dimen/_10sdp"
		android:clickable="true"
		android:padding="@dimen/_5sdp"
		android:text="@string/cancel"
		android:textColor="@color/colorAccent"
		app:layout_constraintHorizontal_bias="1"
		app:layout_constraintEnd_toStartOf="@+id/dialog_confirm_yes"
		app:layout_constraintStart_toEndOf="@+id/dialog_confirm_message"
		app:layout_constraintTop_toBottomOf="@id/dialog_confirm_message" />
	
	<TextView
		android:id="@+id/dialog_confirm_yes"
		style="@style/QuestionFont"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="@dimen/_5sdp"
		android:clickable="true"
		android:text="@string/yes"
		android:textColor="@color/colorAccent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="@id/dialog_confirm_cancel"
		app:layout_constraintBottom_toBottomOf="@id/dialog_confirm_cancel"/>
	
</androidx.constraintlayout.widget.ConstraintLayout>